Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29725

mac static application fails - duplicate symbols in libQt5Widgets and libcocoa.a

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.1.0
    • 5.0.0, 5.0.2
    • Core: Plugins
    • None
    • Mac OS/X Lion
    • macOS
    • 5f948eb62ddb9f429f46ade08f32072212cda493

      Building a static application on mac fails with the linker complaining about duplicate symbols in libqt5Widgets and libcocoa.a

        1. main.cpp
          0.2 kB
        2. foo.pro
          0.1 kB
        3. errors.txt
          2 kB
        For Gerrit Dashboard: QTBUG-29725
        # Subject Branch Project Status CR V

            dedietri Gabriel de Dietrich (drgvond)
            ben.skelton Ben Skelton
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes